correçoes para ubuntu/gnome

--- a/projects/conky/ubuntu/gnome/resources/conky.config
+++ b/projects/conky/ubuntu/gnome/resources/conky.config
@@ -83,7 +83,7 @@ conky.text = [[
 	${goto 25}${voffset 15}  Project: ${exec cat /tmp/fishmonger.json |jq -r .name|xargs }\
 
 	${goto 400}${voffset -360}${color3}${font pixelsize=18}VPN${font}${color0} ${downspeedgraph tun0}\
-	${goto 400}${voffset 40  }${color3}${font pixelsize=18}ISP${font}${color0}   ${downspeedgraph enp0s3}\
+	${goto 400}${voffset 40  }${color3}${font pixelsize=18}ISP${font}${color0}   ${downspeedgraph {INTERFACE}}\
 	${goto 400}${voffset 50  }${color3}VPN:${color0}\
 	${goto 400}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .vpn.ip|xargs }\
 	${goto 400}${voffset 15  }  Country: ${exec cat /tmp/fishmonger.json |jq -r .vpn.country|xargs }\
