--- a/projects/conky/debian/xfce/resources/conky.config
+++ b/projects/conky/debian/xfce/resources/conky.config
@@ -81,9 +81,8 @@ conky.text = [[
 	${goto 25}${voffset 15}${top_mem mem 3}%  ${top_mem name 3}\
 	${goto 25}${voffset 20}${color3}Project:${color0}\
 	${goto 25}${voffset 15}  Project: ${exec cat /tmp/fishmonger.json |jq -r .name|xargs }\
-
-	${goto 400}${voffset -360}${color3}${font pixelsize=18}VPN${font}${color0} ${downspeedgraph tun0}\
-	${goto 400}${voffset 40  }${color3}${font pixelsize=18}ISP${font}${color0}   ${downspeedgraph enp0s3}\
+	${goto 400}${voffset -360}${color3}${font pixelsize=18}Network\
+{BARRA_INTERFACES}
 	${goto 400}${voffset 50  }${color3}VPN:${color0}\
 	${goto 400}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .vpn.ip|xargs }\
 	${goto 400}${voffset 15  }  Country: ${exec cat /tmp/fishmonger.json |jq -r .vpn.country|xargs }\
