--- a/projects/conky/resources/conky.config
+++ b/projects/conky/resources/conky.config
@@ -14,7 +14,6 @@ conky.config = {
 	draw_shades=false,
 	draw_outline=false,
 	draw_borders=false,
-
 	-------------------------------------
 	--  Window Specifications
 	-------------------------------------
@@ -23,7 +22,7 @@ conky.config = {
 
 	alignment="top_right",
 
-	minimum_height=900,
+	minimum_height=1024,
 	minimum_width=600,
 
 	own_window=true,
@@ -51,6 +50,7 @@ conky.config = {
 	color1='f4cb67', -- date
 	color2='ede439', -- day of the week
 	color3='fbf0a3', -- select
+	color4='8b0000', -- download upload
 }
 
 conky.text = [[
@@ -81,8 +81,10 @@ conky.text = [[
 	${goto 25}${voffset 15}${top_mem mem 3}%  ${top_mem name 3}\
 	${goto 25}${voffset 20}${color3}Project:${color0}\
 	${goto 25}${voffset 15}  Project: ${exec cat /tmp/fishmonger.json |jq -r .name|xargs }\
-	${goto 400}${voffset -350}${color3}${font pixelsize=18}Network\
-{BARRA_INTERFACES}
+	${goto 400}${voffset -350}${color1}${font pixelsize=22}       Download\
+{BARRA_INTERFACES_DOWNLOAD}
+	${goto 400}${voffset 5}${color1}${font pixelsize=22}       Upload\
+{BARRA_INTERFACES_UPLOAD}
 	${goto 400}${voffset 20  }${color3}VPN:${color0}\
 	${goto 400}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .vpn.ip|xargs }\
 	${goto 400}${voffset 15  }  Country: ${exec cat /tmp/fishmonger.json |jq -r .vpn.country|xargs }\
