--- a/projects/vpn/resources/vpn.service
+++ b/projects/vpn/resources/vpn.service
@@ -4,6 +4,7 @@ Description=VPN Service
 [Service]
 Environment=LOGNAME={LOGNAME}
 ExecStart=python3 /opt/kfishmonger/projects/vpn/start.py
+ExecStop=python3 /opt/kfishmonger/projects/vpn/stop.py
 
 [Install]
 WantedBy=graphical.target
