Adicionei o DNS Montior no JSON e no conky

--- a/projects/conky/resources/conky.config
+++ b/projects/conky/resources/conky.config
@@ -87,6 +87,8 @@ conky.text = [[
 	${goto 350}${voffset 20  }${color3}TOR Project:${color0}\
 	${goto 350}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .tor.ip|xargs }\
 	${goto 350}${voffset 15  }  Country: ${exec cat /tmp/fishmonger.json |jq -r .tor.country|xargs }\
+	${goto 350}${voffset 20  }${color3}DNS:${color0}\
+	${goto 350}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .dns.ip|xargs }\
 
 	${goto 350}${voffset 20  }${color3}Ports(${tcp_portmon 1 65535 count}):${color0}\
 	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip  0}  ${tcp_portmon 1 65535 rport  0}\
