Fiz várias melhorias no código

--- a/projects/conky/resources/conky.config
+++ b/projects/conky/resources/conky.config
@@ -51,6 +51,7 @@ conky.config = {
 	color2='ede439', -- day of the week
 	color3='fbf0a3', -- select
 	color4='8b0000', -- download upload
+	color5='FF0000', -- ALLERT
 }
 
 conky.text = [[
@@ -81,6 +82,7 @@ conky.text = [[
 	${goto 25}${voffset 15}${top_mem mem 3}%  ${top_mem name 3}\
 	${goto 25}${voffset 20}${color3}Project:${color0}\
 	${goto 25}${voffset 15}  Project: ${exec cat /tmp/fishmonger.json |jq -r .name|xargs }\
+	${goto 25}${voffset 15}  Canal: https://t.me/kfishmonger\
 	${goto 350}${voffset -320  }${color3}VPN:${color0}\
 	${goto 350}${voffset 15  }  IP: ${exec cat /tmp/fishmonger.json |jq -r .vpn.ip|xargs }\
 	${goto 350}${voffset 15  }  Country: ${exec cat /tmp/fishmonger.json |jq -r .vpn.country|xargs }\
@@ -105,8 +107,20 @@ conky.text = [[
 	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip 11}  ${tcp_portmon 1 65535 rport 11}\
 	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip 12}  ${tcp_portmon 1 65535 rport 12}\
 	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip 13}  ${tcp_portmon 1 65535 rport 13}\
-	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip 14}  ${tcp_portmon 1 65535 rport 14}
-	${goto 600}${voffset -350}${color1}${font pixelsize=22}       Download\
+	${goto 350}${voffset 15  }  ${tcp_portmon 1 65535 rip 14}  ${tcp_portmon 1 65535 rport 14}\
+	${goto 350}${voffset 20  }${color3}Alertas:${color0}\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[0].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[0].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[1].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[1].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[2].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[2].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[3].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[3].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[4].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[4].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[5].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[5].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[6].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[6].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[7].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[7].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[8].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[8].message|xargs }\
+	${goto 350}${voffset 15  }   ${exec cat /tmp/alert.json |jq -r .alert[9].type|xargs }   ${exec cat /tmp/alert.json |jq -r .alert[9].message|xargs }\
+	
+	${goto 600}${voffset -600}${color1}${font pixelsize=22}       Download\
 {BARRA_INTERFACES_DOWNLOAD}
 	${goto 600}${voffset 5}${color1}${font pixelsize=22}       Upload\
 {BARRA_INTERFACES_UPLOAD}
