--- a/projects/dns/resources/dnscrypt-proxy.toml
+++ b/projects/dns/resources/dnscrypt-proxy.toml
@@ -7,6 +7,9 @@ server_names = ['SERVER_NAME']
 # Habilitando socks5 TOR
 proxy = 'TOR_SOCKS_5'
 
+doh_servers = true
+force_tcp = true
+
 # Lista de domínios bloqueados no resolvedor de nomes
 [blocked_names]
     blocked_names_file = '/var/kfm/dns/blocked-names.txt'
@@ -18,9 +21,15 @@ proxy = 'TOR_SOCKS_5'
   file = '/var/log/dnscrypt-proxy/nx.log'
 
 [sources]
+  [sources.quad9-resolvers]
+    urls = ["https://quad9.net/dnscrypt/quad9-resolvers.md", "https://raw.githubusercontent.com/Quad9DNS/dnscrypt-settings/main/dnscrypt/quad9-resolvers.md"]
+    minisign_key = "RWQBphd2+f6eiAqBsvDZEBXBGHQBJfeG6G+wJPPKxCZMoEQYpmoysKUN"
+    cache_file = "quad9-resolvers.md"
+    refresh_delay = 72
+    prefix = "quad9-"
   [sources.'public-resolvers']
-  url = 'https://download.dnscrypt.info/resolvers-list/v2/public-resolvers.md'
-  cache_file = '/var/cache/dnscrypt-proxy/public-resolvers.md'
-  minisign_key = 'RWQf6LRCGA9i53mlYecO4IzT51TGPpvWucNSCh1CBM0QTaLn73Y7GFO3'
-  refresh_delay = 72
-  prefix = ''
+    url = 'https://download.dnscrypt.info/resolvers-list/v2/public-resolvers.md'
+    cache_file = '/var/cache/dnscrypt-proxy/public-resolvers.md'
+    minisign_key = 'RWQf6LRCGA9i53mlYecO4IzT51TGPpvWucNSCh1CBM0QTaLn73Y7GFO3'
+    refresh_delay = 72
+    prefix = ''
