--- a/projects/dns/resources/dnscrypt-proxy.toml
+++ b/projects/dns/resources/dnscrypt-proxy.toml
@@ -7,6 +7,7 @@ server_names = ['SERVER_NAME']
 # Habilitando socks5 TOR
 proxy = 'TOR_SOCKS_5'
 
+# habilitando DoH e forçando TCP na camada de Transporte
 doh_servers = true
 force_tcp = true
 
@@ -21,12 +22,6 @@ force_tcp = true
   file = '/var/log/dnscrypt-proxy/nx.log'
 
 [sources]
-  [sources.quad9-resolvers]
-    urls = ["https://quad9.net/dnscrypt/quad9-resolvers.md", "https://raw.githubusercontent.com/Quad9DNS/dnscrypt-settings/main/dnscrypt/quad9-resolvers.md"]
-    minisign_key = "RWQBphd2+f6eiAqBsvDZEBXBGHQBJfeG6G+wJPPKxCZMoEQYpmoysKUN"
-    cache_file = "quad9-resolvers.md"
-    refresh_delay = 72
-    prefix = "quad9-"
   [sources.'public-resolvers']
     url = 'https://download.dnscrypt.info/resolvers-list/v2/public-resolvers.md'
     cache_file = '/var/cache/dnscrypt-proxy/public-resolvers.md'
