--- a/projects/tools/sub/monerod/resources/monerod.service
+++ b/projects/tools/sub/monerod/resources/monerod.service
@@ -1,9 +1,20 @@
 [Unit]
-Description=MoneroD Service
+Description=Monero Full Node
 After=network.target
 
 [Service]
-ExecStart=python3 /opt/kfishmonger/projects/tools/sub/monerod/execstart.py
+User=root
+Group=root
+#WorkingDirectory=~
+#StateDirectory=monero
+#LogsDirectory=monero
+
+Type=simple
+ExecStart=/opt/monero/bin/monerod --config-file /opt/monero/bin/monerod.conf --non-interactive
+StandardOutput=null
+StandardError=null
+
+Restart=always
 
 [Install]
 WantedBy=graphical.target
